[gd_scene load_steps=4 format=3 uid="uid://c6p5nuxnb3g5b"]

[ext_resource type="Script" uid="uid://blry3rujvwh64" path="res://ui_notif_handler/ui.gd" id="1_i2y0w"]
[ext_resource type="Script" uid="uid://cyfwtp4neffig" path="res://ui_notif_handler/responsive.gd" id="2_j6qpi"]
[ext_resource type="Texture2D" uid="uid://ck3wcr15rhu3q" path="res://icon.svg" id="3_3duwb"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i2y0w")

[node name="Responsive" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 51.0
offset_top = 411.0
offset_right = -98.0
offset_bottom = -109.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("2_j6qpi")
metadata/_custom_type_script = "uid://cyfwtp4neffig"

[node name="TextureRect" type="TextureRect" parent="Responsive"]
modulate = Color(1, 0.7, 0.7, 1)
layout_mode = 2
texture = ExtResource("3_3duwb")

[node name="TextureRect2" type="TextureRect" parent="Responsive"]
layout_mode = 2
texture = ExtResource("3_3duwb")

[node name="TextureRect3" type="TextureRect" parent="Responsive"]
modulate = Color(1, 0.49, 0.49, 1)
layout_mode = 2
texture = ExtResource("3_3duwb")

[node name="TextureRect4" type="TextureRect" parent="Responsive"]
modulate = Color(1, 0, 0, 1)
layout_mode = 2
texture = ExtResource("3_3duwb")

[node name="AddButton" type="Button" parent="."]
layout_mode = 0
offset_left = 336.0
offset_top = 122.0
offset_right = 445.0
offset_bottom = 194.0
text = "add"

[node name="RemoveButton" type="Button" parent="."]
layout_mode = 0
offset_left = 502.0
offset_top = 122.0
offset_right = 611.0
offset_bottom = 194.0
text = "remove"

[node name="ChangeOrderButton" type="Button" parent="."]
layout_mode = 0
offset_left = 670.0
offset_top = 122.0
offset_right = 784.0
offset_bottom = 194.0
text = "change_order
"

[connection signal="pressed" from="AddButton" to="." method="_on_add_button_pressed"]
[connection signal="pressed" from="RemoveButton" to="." method="_on_remove_button_pressed"]
[connection signal="pressed" from="ChangeOrderButton" to="." method="_on_change_order_button_pressed"]
